--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -3,7 +3,7 @@
   --mainKor-font: "nanumSquareNeo";
   --mainNum-font: "gmarket";
 
-  --mainBg-color: #f3ede8;
+  --mainBg-color: #f8fafc;
   --subBg100: #cdc0b1;
   --subBg200: #afa395;
   --subBg300: #81887c;
@@ -18,7 +18,7 @@
   --black400: #e0e0e0;
 
   font-family: var(--mainEng-font), var(--mainKor-font);
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
   font-weight: 400;
 
