--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -27,6 +27,9 @@
     overflow: hidden;
   }
   .header__nav {
+    @media (max-width: 800px) {
+      display: none;
+    }
     ul {
       overflow: hidden;
     }
