--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -1,7 +1,3 @@
-#header {
-  @include position-fixed;
-  z-index: 10000;
-}
 .header__inner {
   @include flex-between;
   padding: 0.3rem;
@@ -53,18 +49,20 @@
 
         &::before {
           content: "";
-          width: calc(100% - 20px);
+          width: calc(100% - 16px);
           height: 1px;
           background-color: var(--black);
           position: absolute;
           left: 6px;
           bottom: -2px;
-          transform-origin: 0%;
-          transform: scaleX(0);
-          transition: all 0.3s;
+          transform-origin: 100%;
+          transform: scale3d(0,1,1);
+          transition: transform 0.5s ease;
         }
         &:hover::before {
-          transform: scaleX(1);
+          transform-origin: 0%;
+          transform: scale3d(1,1,1);
+
         }
       }
     }
